header alignment fix

--- a/affiliate-sites/affilio-client/src/app/home/we-support/we-support.component.scss
+++ b/affiliate-sites/affilio-client/src/app/home/we-support/we-support.component.scss
@@ -37,7 +37,9 @@
 
 
 
-
+h3 {
+  text-align: center;
+}
 
 
   }
